stuf/src/p3/tests/t009.err
Semantic error on line 3: Incorrect type (string) for initial value of variable 'some_measurement' of type (double).
