stuf/src/p3/tests/t009.gpl
//Strings cannot be assigned to doubles.
//This should generate an error message
double some_measurement="Happy Days";
